# xiaozhi-esp32

./: .gitignore  CMakeLists.txt  sdkconfig
components/esp32-idf-sqlite3/: CMakeLists.txt  esp32.c
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  idf_component.yml  main.cc  mcp_server.cc
main/audio/: audio_service.cc
main/audio/processors/: afe_audio_processor.cc
main/audio/wake_words/: afe_wake_word.cc  custom_wake_word.cc
main/iot/: Define.h  ErrorCode.h  iot.cpp  iot.h
main/iot/database/: Database.cpp  Database.h  DatabaseDevice.cpp  DatabaseDeviceAttribute.cpp  DatabaseDeviceInGroup.cpp  DatabaseDeviceInScene.cpp  DatabaseGateway.cpp  DatabaseGroup.cpp  DatabaseRule.cpp  DatabaseScene.cpp
main/iot/device/: Device.cpp  Device.h  DeviceDefine.h  DeviceManager.cpp  DeviceManager.h
main/iot/device/ble/: DataScene.cpp  DataScene.h  DeviceBle.cpp  DeviceBle.h
main/iot/gateway/: Gateway.cpp  Gateway.h  GatewayInfo.cpp  GatewayInfo.h
main/iot/gateway/cloud/: ActionCallback.cpp  ActionCallback.h  CloudProtocol.cpp  CloudProtocol.h  Mqtt.cpp  Mqtt.h  MyMqtt.cpp  MyMqtt.h
main/iot/gateway/rpc/: Rpc.cpp  RpcDevice.cpp  RpcGroup.cpp  RpcHc.cpp  RpcRule.cpp  RpcScene.cpp
main/iot/group/: Group.cpp  Group.h  GroupManager.cpp  GroupManager.h
main/iot/json/: jsoncpp.cpp
main/iot/led/: Led.cpp  Led.h
main/iot/log/: Log.cpp  Log.h
main/iot/mqtt/: MqttWrap.cpp  MqttWrap.h
main/iot/object/: Object.cpp  Object.h
main/iot/ota/: Ota.cpp  Ota.h
main/iot/protocol/ble/: BleDefine.h  BleMeshDefine.h  BleOpCode.h  BleProtocol.cpp  BleProtocol.h  BleProtocolConfig.cpp  BleProtocolGeneric.cpp  BleProtocolLight.cpp  BleProtocolTimeScene.cpp  BleProtocolVendor.cpp  app_ble_mesh_provi.c  app_ble_mesh_provi.h  ble_mesh_config_client.cpp  (+8 more)
main/iot/rule/: Rule.cpp  Rule.h  RuleManager.cpp  RuleManager.h
main/iot/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
main/iot/task/: app_task.c  app_task.h
main/iot/timer/: TimerSchedule.cpp  TimerSchedule.h
main/iot/util/: Util.cpp  Util.h
partitions/v1/: 16m.csv
(+203 files in other folders)
